--- a/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/pacientes.ejs
@@ -160,7 +160,7 @@
         </tbody>
       </table>
     <% } else { %>
-      <p style="text-align: center;">No hay pacientes para mostrar.</p>
+      <p style="text-align:center; color: #e25757;">No hay pacientes para mostrar.</p>
     <% } %>
 
     <% if (esMedico) { %>
