carpeta public con archivos estaticos: css e img

--- a/TP3-ClinicaSalud+/src/views/ejs/login.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/login.ejs
@@ -1,107 +1,7 @@
 <!-- formulario de login d personal de la clinica con vista ejs-->
 
 <%- include('partials/head') -%>
-<style>
-  body{
-         margin:0;
-        font-family: 'Roboto', sans-serif;
-        background-image: url('./img/clinica_6.jpg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-attachment: fixed;
-        color:#0e0813;
-
-  }
-  .contenedor-login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 65vh;
-    padding: 20px;
-
-  }
-  .titulo-login {
-    background-color: rgba(255, 255, 255, 0.85);
-    padding: 20px 30px;
-    border-radius: 12px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    font-size: 28px;
-    font-weight: 700;
-    color: #0e0813;
-    margin-bottom: 20px;
-  
-  }
-  .formulario {
-    background-color: rgba(255, 255, 255, 0.95);
-    padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
-    width: 90%;
-    max-width: 400px;
-    
-    
-  }
-  .formulario h3{
-       text-align: center;
-    margin-bottom: 25px;
-    font-size: 22px;
-    font-weight:400;
-    color: #102358;
-  }
-  .formulario label {
-     display: block;
-    margin-bottom: 5px;
-    font-weight: 600;
-    color: #0e0813;
-  }
-    .formulario input[type="email"],
-  .formulario input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
-    font-size: 14px;
-  }
-
-  .formulario button[type="submit"] {
-    background-color: #71cbd1;
-    color: #0e0813;
-    padding: 12px;
-    width: 100%;
-    border-radius: 8px;
-    border: none;
-    font-weight: bold;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-  }
-
-  .formulario button[type="submit"]:hover {
-    background-color: #4dbdc4;
-    cursor: pointer;
-  }
-
-  .mensaje-error {
-    color: red;
-    text-align: center;
-    margin-bottom: 15px;
-    font-weight: bold;
-  }
-
-  @media screen and (max-width: 600px) {
-    .titulo-login {
-      font-size: 22px;
-      padding: 15px 20px;
-    }
-
-    .formulario {
-      padding: 20px;
-    }
-  }
-
-</style>
+<link rel="stylesheet" href="/css/login.css">
 <body>
   <%- include('partials/header') -%>
 
