--- a/TP3-ClinicaSalud+/src/views/ejs/partials/footer.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/partials/footer.ejs
@@ -1,20 +1,4 @@
-  <style>
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-    p {
-      margin: 0;
-      font-size: 14px;
-      line-height: 1.5;
-
-    }
-  </style>
+<link rel="stylesheet" href="/css/footer.css">
   <footer>
 
         <p>© <%= new Date().getFullYear() %> Clinica Salud +</p>
