--- a/TP3-ClinicaSalud+/src/views/ejs/partials/header.ejs
+++ b/TP3-ClinicaSalud+/src/views/ejs/partials/header.ejs
@@ -1,3 +1,4 @@
+    <link rel="stylesheet" href="/css/header.css">
     <header>
         <div class="contenedor-header">
             <div class="logo">
@@ -16,62 +17,4 @@
             </ul>
         </nav>
         </div>
-        <style> 
-          
-        
-            header {
-                background-color: #414e88;
-                color: #fff;
-                padding: 15px 10px;
-                height: 60px;
-                display: flex;
-                align-items: center;
-              
-            }
-            .contenedor-header {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                width: 100%;
-                
-            }
-            .logo {
-                display: flex;
-                align-items: center;
-                
-                gap: 10px;
-            }
-            .logo img {
-                width: auto;
-                height: 45px;
-            }
-            .logo h1 {
-                font-size: 25px;
-                margin: 0;
-                
-            }
-            
-            .nav-links {
-                list-style: none;
-                display: flex;
-                gap: 15px;
-                justify-content: end;
-                align-items: center;
-                margin: 0;
-                padding: 0;
-                
-                
-            }
-            .nav-links li a {
-                color: #fff;
-                text-decoration: none;
-                font-size: 18px;
-                padding: 8px 12px;
-                border-radius: 5px;
-                transition: background-color 0.3s ease;
-            }
-            .nav-links li a:hover {
-                background-color: rgba(255, 255, 255, 0.2);
-            }
-        </style>
     </header>
