--- a/TP3-ClinicaSalud+/src/public/css/turnos.css
+++ b/TP3-ClinicaSalud+/src/public/css/turnos.css
@@ -92,6 +92,7 @@
     width: 100%;
     max-width: 400px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
   }
 
@@ -99,7 +100,7 @@
     padding: 10px;
     border-radius: 8px;
     border: 1px solid #ccc;
-    width: 60%;
+    width: 70%;
   }
 
   .formulario button {
@@ -111,6 +112,13 @@
   .formulario button:hover {
     background-color: #45a049;
     cursor: pointer;
+  }
+
+  .mensaje-error {
+    text-align: center;
+    color: red;
+    font-weight: bold;
+    margin-top: 20px;
   }
 
   @media screen and (max-width: 600px) {
