--- a/Tp4-React/FrontEnd/TarjetasConInfo/src/index.css
+++ b/Tp4-React/FrontEnd/TarjetasConInfo/src/index.css
@@ -22,6 +22,12 @@ a:hover {
   color: #535bf2;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+
 body {
   margin: 0;
   display: flex;
@@ -36,7 +42,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  width: 100%;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
